# cli-stock-sim

./: .gitignore  Cargo.toml  compose.yaml  generate_names.py  init.sql
cli-client/: Cargo.toml
cli-client/src/: activity_manager.rs  common.rs  main.rs  util.rs
cli-client/src/activities/: mod.rs
cli-client/src/activities/login/: mod.rs  update.rs  view.rs
cli-client/src/activities/login/components/login/: mod.rs  password_input.rs  username_input.rs
cli-client/src/activities/main_menu/: mod.rs  update.rs  view.rs
cli-client/src/activities/main_menu/components/: menu.rs  mod.rs
cli-client/src/activities/stock_overview/: mod.rs  update.rs  view.rs
cli-client/src/activities/stock_overview/components/: header.rs  mod.rs  stock_chart.rs  stocklist.rs
cli-client/src/activities/stock_overview/components/popup/: buy_popup.rs  exit_popup.rs  mod.rs
cli-client/src/common_components/: global_listener.rs  mod.rs
cli-client/src/common_components/title_bar/: mod.rs
cli-client/src/components/: mod.rs
cli-client/src/components/counter/: lettercounter.rs  mod.rs
cli-client/src/components/header/: header.rs
cli-client/src/components/stock_market/: overview.rs
cli-client/src/components/title_bar/: mod.rs
cli-client/src/data_generator/: mock_data_generator.rs  time_data_generator.rs
dto/: Cargo.toml
login-service/: Cargo.toml
login-service/src/: main.rs  util.rs
sql/: init.sql  insert_cars.sql
src/: activity_manager.rs  common.rs  context.rs  main.rs  model.rs  models.rs  util.rs
src/activities/: mod.rs
src/activities/main_menu/: mod.rs  update.rs
src/activities/stock_overview/: mod.rs  update.rs  view.rs
src/components/: menu.rs  mod.rs
src/components/counter/: lettercounter.rs  mod.rs
src/components/header/: header.rs
src/components/stock_market/: mod.rs  overview.rs  stock_chart.rs
src/components/title_bar/: balance_label.rs  time_label.rs
src/data_generator/: mod.rs  stock_data_generator.rs  time_data_generator.rs
stock-data-service/: Cargo.toml
stock-data-service/src/: main.rs  util.rs
