[package]
name = "cli-stock-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive"] }
tui = "0.19.0"
tui-realm-stdlib = "1.2.0"
tuirealm = "1.8.0"
unicode-width = "0.1.10"


