[package]
name = "cli-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
crossterm = "0.26.1"
fern = "0.6.2"
humantime = "2.1.0"
log = "0.4.19"
rand = "0.8.5"
simple-ntp = "0.1.1"
strum = { version = "0.24.1", features = ["derive"] }
tui = "0.19.0"
tui-realm-stdlib = "1.3.0"
tuirealm = "1.8.0"
unicode-width = "0.1.10"


