[package]
name = "login-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.19"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies.hyper]
version = "0.14.27"
features = ["full"]

[dependencies.sqlx]
version = "0.7.1"
features = ["runtime-tokio", "tls-rustls", "chrono", "postgres", "uuid", "json"]

[dependencies.chrono]
version = "0.4.26"
features = ["serde"]

[dependencies.serde]
version = "1.0.173"
features = ["derive"]

[dependencies.tokio]
version = "1.29.1"
features = ["full"]
