[package]
name = "stock-data-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.19"
serde_json = "1.0.103"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies.sqlx]
version = "0.7.1"
features = ["runtime-tokio", "tls-rustls", "chrono", "postgres", "uuid", "json"]

[dependencies.tokio]
version = "1.29.1"
features = ["full"]

[dependencies.serde]
version = "1.0.175"
features = ["derive"]
